#52  WEB: Registration form for user profile, #54  WEB: Job component, #55  WEB: Jobpost

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -5,15 +5,14 @@
   <meta charset="utf-8">
   <base href="/">
 
-  <link
-    href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic'
-    rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/main.css">
 
   <!-- TODO remove this when Google fixes their bug in angular beta -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDL7rTTuURd4I5jNb7YPoETRAqH6PZt_00"></script>
 
 </head>
 <body>
