#56  WEB: Make appointment component

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="js/datepicker/dist/datepickk.min.css">
+
+  <script src="js/datepicker/dist/datepickk.min.js"></script>
 
   <!-- TODO remove this when Google fixes their bug in angular beta -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
