--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 
   <script src="js/datepicker/dist/datepickk.min.js"></script>
 
+  <!-- Stripe Connect -->
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+
   <!-- TODO remove this when Google fixes their bug in angular beta -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDL7rTTuURd4I5jNb7YPoETRAqH6PZt_00"></script>
